# std

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: main.yaml
src/std/: cli.py  patterns.py
src/std/scanners/: __init__.py  base_secret_scanner.py
tests/fixtures/: sample_file.py
tests/fixtures/sample_directory/: sample_file.py
tests/test_scanners/: test_base_secret_scanner.py
